# compilador-cascabel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
CascabelCompilator_v1.1/: AnalizadorLexico.py  AnalizadorSemantico.py  AnalizadorSintactico.py  Arbol.py  GeneradorDeCodigo.py  main.py
docs/: README-original.txt
examples/invalid/lexical/: caracter_invalido.casc
examples/invalid/mixed/: fibonacci_con_errores.casc
examples/invalid/semantic/: errSem1.casc  errSem2.casc  err_fibonacci.casc  prueba_duplicada.casc
examples/lexical/: tokens.casc
examples/valid/: fibonacci.casc  holamundo.casc  p1.casc  p2.casc  prueba.casc  prueba_bloques_vacios.casc  prueba_precedencia.casc
programas/: miPrograma.casc  miProgramaError.casc  prueba_fin_inesperado.casc
src/cascabel/: __init__.py  __main__.py  cli.py  code_generator.py  parser.py
tests/: conftest.py  helpers.py  test_generator.py  test_lexer.py  test_parser.py  test_semantic.py
